# cas4f

./: CMakeLists.txt  about.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paymentform.cpp  paymentform.h  paymentform.ui  res.qrc  roulette.cpp  roulette.h  roulette.ui  slots.cpp  slots.h  slots.ui
